fix: move CV to src/assets and use import method

--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "cleanUrls": true,
   "rewrites": [
     {
-      "source": "/assets/(.*)",
-      "destination": "/assets/$1"
+      "source": "/cv-fino.pdf",
+      "destination": "/cv-fino.pdf"
     },
     {
       "source": "/(.*)",
