--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "portofolio",
-  "homepage": "https://rissss21.github.io/portofolio",
+  "name": "portofolio-fino",
+  "homepage": "https://alfinoofrmnsyh.github.io/portofolio-fino",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp dist/index.html dist/404.html",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist"
